// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Recombee's addBookmark destination action: all fields 1`] = `
Object {
  "additionalData": Object {
    "testType": "GxFzk&V2a4R8iF62G9]q",
  },
  "cascadeCreate": true,
  "itemId": "GxFzk&V2a4R8iF62G9]q",
  "recommId": "GxFzk&V2a4R8iF62G9]q",
  "timestamp": "GxFzk&V2a4R8iF62G9]q",
  "userId": "GxFzk&V2a4R8iF62G9]q",
}
`;

exports[`Testing snapshot for Recombee's addBookmark destination action: required fields 1`] = `
Object {
  "cascadeCreate": true,
  "itemId": "GxFzk&V2a4R8iF62G9]q",
  "userId": "GxFzk&V2a4R8iF62G9]q",
}
`;
